--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,5 @@
 logging.level.org.springframework=info
+
+currency-service.url=http://prod.in28minutes.com
+currency-service.username=prodsername
+currency-service.key=prodkey
