--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,8 @@
-logging.level.org.springframework=trace
+logging.level.org.springframework=info
 
 currency-service.url=http://dev.in28minutes.com
 currency-service.username=devsername
 currency-service.key=devkey
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
