--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.org.springframework=debug
 spring.profiles.active=dev
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 currency-service.url=http://default1.in28minutes.com
 currency-service.username=defaultusername
