--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,5 @@
 logging.level.org.springframework=info
+server.port=8081
 
 currency-service.url=http://dev.in28minutes.com
 currency-service.username=devsername
