CRUD, jsp frames y spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ logging.level.org.springframework=debug
 spring.profiles.active=dev
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.mvc.format.date=yyyy-MM-dd
 
 currency-service.url=http://default1.in28minutes.com
 currency-service.username=defaultusername
 currency-service.key=defaultkey
+
+
 
 management.endpoints.web.exposure.include=*
